[gd_scene load_steps=2 format=3 uid="uid://h0ngykfdybl1"]

[ext_resource type="Script" uid="uid://dvbktl7oilru" path="res://settings.gd" id="1_5p8wc"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p8wc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 521.0
offset_bottom = 376.0
color = Color(6.54578e-06, 0.663806, 0.830431, 0.313726)

[node name="TItle" type="RichTextLabel" parent="ColorRect"]
modulate = Color(0.516302, 0.391962, 0.118891, 1)
layout_mode = 0
offset_left = 168.0
offset_top = 13.0
offset_right = 295.0
offset_bottom = 53.0
text = "Settings"

[node name="sound_setting" type="HScrollBar" parent="ColorRect"]
layout_mode = 0
offset_left = 124.0
offset_top = 106.0
offset_right = 361.0
offset_bottom = 125.0
max_value = 12.0
step = 0.3

[node name="sound_label" type="RichTextLabel" parent="ColorRect"]
modulate = Color(0.516302, 0.391962, 0.118891, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 71.0
offset_right = 255.0
offset_bottom = 111.0
theme_override_font_sizes/normal_font_size = 12
text = "Sound"

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 9
text = "close"

[connection signal="value_changed" from="ColorRect/sound_setting" to="." method="_on_sound_setting_value_changed"]
[connection signal="button_down" from="ColorRect/Button" to="." method="_on_button_button_down"]
